<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_intro"
    tools:context=".RegistrationPage">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="64dp"
        android:layout_height="44dp"
        app:srcCompat="@drawable/btn_arraw1" />

    <TextView
        android:id="@+id/tvRegisterNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/tvRegisterNow"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="serif"
        android:text="@string/tvRname"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/reg_user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="serif"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:hint="@string/tvRname"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvRmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:text="@string/tvRmail"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/reg_user_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="serif"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:hint="@string/tvRmail"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvRaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:text="@string/tvRaddress"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/reg_user_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="serif"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:hint="@string/editRaddress"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tvRpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:text="@string/tvRpassword"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/reg_user_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="serif"
        android:inputType="textPassword"
        android:padding="16dp"
        android:hint="@string/editRpassword"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvRCpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:text="@string/tvRCpassword"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/reg_user_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="serif"
        android:inputType="textPassword"
        android:padding="16dp"
        android:hint="@string/editRCpassword"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_background"
        android:backgroundTint="@color/gree_100"
        android:fontFamily="serif"
        android:text="@string/tvRegisterNow"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvL3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/tvL3"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_login_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/gree_100"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/btnLogin"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>