<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#f5f5f5"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <ScrollView
        android:id="@+id/ScrView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="360dp"
            android:background="@drawable/top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="64dp"
            android:layout_height="44dp"
            app:srcCompat="@drawable/btn_arraw1"
            tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="150dp"
            android:layout_height="159dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="60dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnSelect_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Profile Picture"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />


        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/white_background"
            android:elevation="3dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.45">

            <TextView
                android:id="@+id/tvPname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:fontFamily="serif"
                android:text="@string/tvPname"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user_profile_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/editPname"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvPmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:fontFamily="serif"
                android:text="@string/tvPmail"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user_profile_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="serif"
                android:hint="@string/editPmail"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvPadderss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:fontFamily="serif"
                android:text="@string/tvPadderss"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user_profile_edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/editPaddress"
                android:inputType="textPersonName" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdateUserProfile"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/btn_background"
                android:fontFamily="serif"
                android:text="@string/btnUpdate"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDeleter"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_background"
                android:backgroundTint="@color/design_default_color_error"
                android:fontFamily="serif"
                android:text="@string/btnDeleter"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logOutButton"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_background"
                android:backgroundTint="@color/design_default_color_error"
                android:fontFamily="serif"
                android:text="Log Out"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gree_100"
        app:itemIconTint="@drawable/nav_style"
        app:itemTextColor="@drawable/nav_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>